[project]
name = "option-pricer"
version = "0.1.0"
description = "Option Pricing Engine"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
